Invalidate the shadow subtree style when slotted pseudo rules are present. https://bugs.webkit.org/show_bug.cgi?id=172822

Patch by Emilio Cobos Álvarez <ecobos@igalia.com> on 2017-06-02
Reviewed by Antti Koivisto.

No new tests, this is tested by
fast/shadow-dom/css-scoping-slot-with-id.html, once we don't force an
Inherit style change for slots. I could add some more tests for stuff
with descendant combinators and similar I guess, though.

* style/AttributeChangeInvalidation.cpp:
(WebCore::Style::AttributeChangeInvalidation::invalidateStyle):
* style/ClassChangeInvalidation.cpp:
(WebCore::Style::ClassChangeInvalidation::invalidateStyle):
* style/IdChangeInvalidation.cpp:
(WebCore::Style::IdChangeInvalidation::invalidateStyle):

Canonical link: https://commits.webkit.org/189740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217708 268f45cc-cd09-0410-ab3c-d52691b4dbfc